// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createQueryType created query input type 1`] = `
"input Base_Query {
  filters: Base_Filters!
}"
`;

exports[`createQueryType created query input type 2`] = `
"input Base_Query {
  filters: Base_Filters!
  sortBy: Base_Query_Sort_Input
}"
`;

exports[`createQueryType created query input type 3`] = `
"input Base_Query {
  filters: Base_Filters!
  after: String
  before: String
  limit: PositiveInt
}"
`;

exports[`createQueryType created query input type 4`] = `
"input Base_Query {
  filters: Base_Filters!
  sortBy: Base_Query_Sort_Input
  after: String
  before: String
  limit: PositiveInt
}"
`;
